# burn-rl-example

./: .pre-commit-config.yaml  Cargo.toml  README.md  install-tools.sh  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
python/: plot_rewards.py
src/: agent.rs  batch.rs  dqn.rs  env.rs  layers.rs  lib.rs  model.rs  trainer.rs
src/agent/: categorical.rs  expectation.rs  quantile.rs
src/env/: gym_super_mario_bros.rs  gymnasium.rs
src/trainer/: prioritized.rs  uniform.rs
