[package]
name = "burn-rl-example"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }
numpy = "0.21"
ndarray = "0.15"
rand = "0.8"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
# use patch version until https://github.com/tracel-ai/burn/pull/1770 will be merged.
burn = { git = "https://github.com/getumen/burn.git", branch = "main", features = ["tch", "train", "openblas"] }
hashbrown = { version = "0.14", features = ["serde"] }
rmp-serde = "1.3"
clap = { version = "4.5", features = ["derive"] }
tch = {version = "0.15", features = ["download-libtorch"]}
chrono = "0.4"

[dev-dependencies]
claim = "0.5"
