[package]
name = "burn-rl-example"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["auto-initialize"] }
numpy = "0.21"
ndarray = "0.15"
rand = "0.8"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
# use patch version until https://github.com/tracel-ai/burn/pull/1770 will be merged.
burn = { git = "https://github.com/getumen/burn.git", branch = "main", features = ["tch", "train", "openblas"] }
hashbrown = { version = "0.14", features = ["serde"] }
rmp-serde = "1.3.0"
clap = { version = "4.5", features = ["derive"] }
tch = {version = "0.15", features = ["download-libtorch"]}
chrono = "0.4"
tempfile = "3.12"
zstd = "0.13"
num-traits = "0.2"
rand_distr = "0.4"
itertools = "0.13"
rocksdb = { version = "0.22.0", features = ["zstd"] }
parking_lot = "0.12.3"

[dev-dependencies]
approx = "0.5"
claim = "0.5"
