[project]
name = "burn-rl-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "getumen", email = "n.yoshihiro.jp@gmail.com" }
]
dependencies = [
    "gymnasium[box2d]==0.29.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/burn_rl_example"]
