[project]
name = "burn-rl-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "getumen", email = "n.yoshihiro.jp@gmail.com" }
]
dependencies = [
    "gymnasium[box2d,atari,accept-rom-license]==0.29.1",
    "gym-super-mario-bros==7.4.0",
    "gym==0.23.1",
    "matplotlib==3.9.1",
    "click==8.1.7",
]
readme = "README.md"
requires-python = ">= 3.9, <3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/burn_rl_example"]
